force-app/main/default/objects/QuickBooks_OAuth__c/QuickBooks_OAuth__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Stores QuickBooks OAuth tokens and configuration</description>
    <label>QuickBooks OAuth</label>
</CustomObject>