force-app/main/default/objects/QuickBooks_OAuth__c/fields/Access_Token__c.field-meta.xml
<CustomField>
    <fullName>Access_Token__c</fullName>
    <description>OAuth Access Token</description>
    <label>Access Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>