force-app/main/default/objects/QuickBooks_OAuth__c/fields/Company_Id__c.field-meta.xml
<CustomField>
    <fullName>Company_Id__c</fullName>
    <description>QuickBooks Company ID</description>
    <label>Company ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>