force-app/main/default/objects/QuickBooks_OAuth__c/fields/Token_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Token_Expiry__c</fullName>
    <description>Token Expiration DateTime</description>
    <label>Token Expiry</label>
    <type>DateTime</type>
</CustomField>